mega-repo/assets/github/repos/ethereum/solidity/test/libsolidity/syntaxTests/pragma/experimental_pragma_without_experimental_mode.sol
pragma experimental __test;
pragma experimental solidity;
// ====
// EVMVersion: >=constantinople
// ----
// SyntaxError 2816: (0-27): Experimental pragmas can only be used if experimental mode is enabled. To enable experimental mode, use the --experimental flag.
// SyntaxError 2816: (28-57): Experimental pragmas can only be used if experimental mode is enabled. To enable experimental mode, use the --experimental flag.
